# taming-3dgs

./: .gitignore  CLAUDE.md  DATASET_STATUS_REPORT.md  README.md  TRAINING_COMMANDS_REPORT.md  check_failed_datasets.sh  download_datasets.sh  environment.yml  environment_fixed.yml  environment_rtx5080.yml  setup_rtx5080.sh  setup_rtx5080_compat.sh  submod_test.py  test_all_datasets.sh  train.py  train.sh  train_failed_datasets.sh  train_remaining.sh  train_rtx5080.sh  train_working.sh
docs/: README.md
docs/architecture/: CODEBASE_ARCHITECTURE.md
docs/development/: SUBMODULES_BUILD_STRUCTURE.md
docs/misc/: RunMarkdown.md
docs/research/: CVPR_RESEARCH_PROPOSAL.tex  CVPR_RESEARCH_SUMMARY.md
docs/rtx5080/: BIG_MODE_BUGS_AND_FIXES.md  BIG_MODE_TRAINING_REPORT.md  BUDGET_MODE_TRAINING_REPORT.md  DENSIFICATION_ALGORITHM_FIX.md  LOOP_BUG_FIX.md  RTX5080_PYTORCH_UPGRADE_SESSION.md  RTX5080_SETUP_SESSION.md  RTX5080_TRAINING_FIX_SESSION.md  RTX5080_TRAINING_SCRIPT_VALIDATION.md  RTX5080_TRAINING_SUCCESS.md  SESSION_HISTORY_2025-10-25.md
docs/rtx5090/: README.md
docs/setup/: QUICK_SETUP.md  SETUP_REPORT.md  SYSTEM_SETUP_GUIDE.md
docs/training/: ALL_DATASETS_TRAINING_REPORT.md  FINAL_ALL_DATASETS_REPORT.md
scene/: gaussian_model.py
submodules/diff-gaussian-rasterization/: pyproject.toml
submodules/diff-gaussian-rasterization/cuda_rasterizer/: rasterizer_impl.h
submodules/simple-knn/: pyproject.toml
