[build-system]
requires = ["setuptools>=61.0", "wheel", "torch"]
build-backend = "setuptools.build_meta"

[project]
name = "simple_knn"
version = "0.1.0"
description = "Simple k-nearest neighbors implementation for 3D Gaussian Splatting"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "Non-commercial research license - see LICENSE.md"}
dependencies = [
    "torch>=1.12.0",
]
authors = [
    {name = "GRAPHDECO research group", email = "george.drettakis@inria.fr"}
]

[tool.setuptools]
# No packages to find - extension module only
